<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.edu.whut.sept</groupId>
    <artifactId>fire-ice</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>Fire-Ice Online</name>
    <description>Fire-Ice Online release launcher and CI packaging project</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <junit.version>5.10.2</junit.version>
        <skipFormatCheck>false</skipFormatCheck>
        <skipNativeBuild>false</skipNativeBuild>
        <skipNativeTests>false</skipNativeTests>
        <native.runner>bash</native.runner>
        <native.format.args>${project.basedir}/scripts/maven-native.sh format</native.format.args>
        <native.build.args>${project.basedir}/scripts/maven-native.sh build</native.build.args>
        <native.test.args>${project.basedir}/scripts/maven-native.sh test</native.test.args>
    </properties>

    <profiles>
        <profile>
            <id>windows-scripts</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <native.runner>cmd</native.runner>
                <native.format.args>/c ${project.basedir}/scripts/maven-native.bat format</native.format.args>
                <native.build.args>/c ${project.basedir}/scripts/maven-native.bat build</native.build.args>
                <native.test.args>/c ${project.basedir}/scripts/maven-native.bat test</native.test.args>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>fire-ice-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>cn.edu.whut.sept.fireice.Launcher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/release-jar.xml</descriptor>
                    </descriptors>
                    <archive>
                        <manifest>
                            <mainClass>cn.edu.whut.sept.fireice.Launcher</mainClass>
                        </manifest>
                    </archive>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-release-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>clang-format-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <skip>${skipFormatCheck}</skip>
                            <target>
                                <exec executable="${native.runner}" failonerror="true" dir="${project.basedir}">
                                    <arg line="${native.format.args}"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>build-native</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <skip>${skipNativeBuild}</skip>
                            <target>
                                <exec executable="${native.runner}" failonerror="true" dir="${project.basedir}">
                                    <arg line="${native.build.args}"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>run-native-tests</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <skip>${skipNativeTests}</skip>
                            <target>
                                <exec executable="${native.runner}" failonerror="true" dir="${project.basedir}">
                                    <arg line="${native.test.args}"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
